--- a/app/views/todo_tasks/_form.html.erb
+++ b/app/views/todo_tasks/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with(model: todo_task) do |form| %>
   <% if todo_task.errors.any? %>
     <div style="color: red">
-      <h2><%= pluralize(todo_task.errors.count, "error") %> prohibited this todo_task from being saved:</h2>
+      <h2><%= pluralize(todo_task.errors.count, "error") %> found in form:</h2>
 
       <ul>
         <% todo_task.errors.each do |error| %>
@@ -15,22 +15,17 @@
     <%= form.label :description, style: "display: block" %>
     <%= form.text_field :description %>
   </div>
-
+  <br>
   <div>
     <%= form.label :reminder, style: "display: block" %>
     <%= form.datetime_field :reminder %>
   </div>
-
+  <br>
   <div>
     <%= form.label :dueby, style: "display: block" %>
     <%= form.datetime_field :dueby %>
   </div>
-
-  <div>
-    <%= form.label :completed, style: "display: block" %>
-    <%= form.check_box :completed %>
-  </div>
-
+  <br>
   <div>
     <%= form.submit %>
   </div>
