Included _form_edit.html.erb template to render completed option when editing

--- a/app/views/todo_tasks/edit.html.erb
+++ b/app/views/todo_tasks/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing todo task</h1>
 
-<%= render "form", todo_task: @todo_task %>
+<%= render "form_edit", todo_task: @todo_task %>
 
 <br>
 
