--- a/app/views/landing_page/index.html.erb
+++ b/app/views/landing_page/index.html.erb
@@ -8,6 +8,8 @@
 
   <% if Current.user %>
     Logged in as: <%= Current.user.email %><br>
+    <%= link_to 'View Todo List', todo_tasks_path, method: :get %>
+    <br>
     <%= link_to 'Edit Password', edit_password_path %>
     <%= button_to 'Logout', logout_path, method: :delete %>
     <% else %>
