--- a/app/views/todo_tasks/index.html.erb
+++ b/app/views/todo_tasks/index.html.erb
@@ -4,13 +4,18 @@
 
 <div id="todo_tasks">
   <% @todo_tasks.each do |todo_task| %>
+    <% if todo_task.isCurrent %>
     <%= render todo_task %>
     <p>
       <%= link_to "Show this todo task", todo_task %>
     </p>
+    <% end %>
   <% end %>
 </div>
 
 <br>
 <br>
 <%= link_to "New todo task", new_todo_task_path %>
+<p>
+<%= link_to 'Return to Home', home_path, method: :get %>
+</p>
