--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,6 +26,9 @@
 
 #heading{
 	flex: 0 35%;
+	text-align: center;
+	font-size: 26px;
+	margin-top: 30px;
 }
 
 #login-button-container{
@@ -63,10 +66,12 @@
 	color: #352f44;
 	text-align: center;
 	margin-bottom: 10px;
+	font-size: 18px;
 }
 
 #landing-text a{
 	color: #325CF5;
+	margin-bottom: 10px;
 }
 
 #landing-text::after {
