--- a/app/views/landing_page/index.html.erb
+++ b/app/views/landing_page/index.html.erb
@@ -1,10 +1,10 @@
-<h1 id="header">Welcome to my task tracking application!</h1>
+<h1 id="heading">Welcome to my task tracking application!</h1>
 <div id="landing-text">
 <p>I decided to create this project as a way to learn Ruby. Source code can be found at: </p>
 <a href="https://github.com/LindsayMichelleAllen/Ruby_Todo_App">Github - Ruby_Todo_App</a>
 </div>
 
-<h1 id="header">What does it do?</h1>
+<h1 id="heading">What does it do?</h1>
 <div id="landing-text">
 <p>Provides a way to keep track of tasks and stay organized</p>
 </div>
@@ -17,7 +17,7 @@
     <%= link_to 'Edit Password', edit_password_path %>
     <%= button_to 'Logout', logout_path, method: :delete %>
     <% else %>
-    <h1 id="header">Create a new account or login below to get started</h1>
+    <h1 id="heading">Create a new account or login below to get started</h1>
     <div id="login-button-container">
     <%= button_to 'Sign Up', sign_up_path, method: :get, class: "button" %>
     <%= button_to 'Login', sign_in_path, method: :post, class: "button" %>
