--- a/app/views/landing_page/index.html.erb
+++ b/app/views/landing_page/index.html.erb
@@ -1,4 +1,9 @@
-<h1 id="heading">Welcome to my task tracking application!</h1>
+<% if Current.user %>
+  <h1 id="heading">Welcome back <%= Current.user.username %>!</h1>
+<% else %>
+  <h1 id="heading">Welcome to my task tracking application!</h1>
+<% end %>
+
 <div id="landing-text">
 <p>I decided to create this project as a way to learn Ruby. Source code can be found at: </p>
 <a href="https://github.com/LindsayMichelleAllen/Ruby_Todo_App">Github - Ruby_Todo_App</a>
@@ -11,14 +16,15 @@
 
 
   <% if Current.user %>
-    Logged in as: <%= Current.user.email %><br>
-    <%= link_to 'View Todo List', todo_tasks_path, method: :get %>
+    <div id="button-container">
+    <%= button_to 'View Todo List', todo_tasks_path, method: :get, class: "button" %>
     <br>
-    <%= link_to 'Edit Password', edit_password_path %>
-    <%= button_to 'Logout', logout_path, method: :delete %>
+    <%= button_to 'Edit Password', edit_password_path, method: :get, class: "button" %>
+    <%= button_to 'Logout', logout_path, method: :delete, class: "button" %>
+    </div>
     <% else %>
     <h1 id="heading">Create a new account or login below to get started</h1>
-    <div id="login-button-container">
+    <div id="button-container">
     <%= button_to 'Sign Up', sign_up_path, method: :get, class: "button" %>
     <%= button_to 'Login', sign_in_path, method: :post, class: "button" %>
     </div>
