--- a/app/views/password/edit.html.erb
+++ b/app/views/password/edit.html.erb
@@ -1,4 +1,5 @@
-  <h1>Edit Password</h1>
+  <h1 id="heading">Edit Password</h1>
+  <div id="form-centering">
   <%= form_with model: Current.user, url: edit_password_path do |f| %>
     <p>
     <%= f.label 'password:'%><br>
@@ -9,9 +10,10 @@
     <%= f.password_field :password_confirmation %>
     </p>
     <p>
-    <%= f.submit 'Update' %>
+    <%= f.submit 'Update', class: "button" %>
     </p>
     <p>
-    <%= link_to 'Return to Home', home_path, method: :get %>
+    <%= button_to 'Return to Home', home_path, method: :get, class: "button" %>
     </p>
   <% end %>
+  </div>
