--- a/app/views/registration/new.html.erb
+++ b/app/views/registration/new.html.erb
@@ -1,4 +1,6 @@
-<h1>Sign Up</h1>
+
+<h1 id="heading">Sign Up</h1>
+<div id="form-centering">
   <%= form_with model: @user, url: sign_up_path, method: "post" do |f| %>
     <p>
     <%= f.label 'email' %><br>
@@ -17,9 +19,13 @@
     <%= f.password_field :password_confirmation %>
     </p>
     <p>
-    <%= f.submit 'Sign Up' %>
-    </p>
-    <p>
-    <%= link_to 'Return to Home', home_path, method: :get %>
+    <%= f.submit 'Sign Up', class: "button" %>
     </p>
   <% end %>
+  
+    </div>
+    <div id="button-container">
+    <p>
+    <%= button_to 'Return to Home', home_path, method: :get, class: "button" %>
+    </p>
+    </div>
