--- a/app/views/todo_tasks/_form.html.erb
+++ b/app/views/todo_tasks/_form.html.erb
@@ -12,21 +12,21 @@
   <% end %>
 
   <div>
-    <%= form.label :description, style: "display: block" %>
-    <%= form.text_field :description %>
+    <%= form.label :description, style: "margin-right: 10px;" %>
+    <%= form.text_field :description, style: "float: right;" %>
   </div>
   <br>
   <div>
-    <%= form.label :reminder, style: "display: block" %>
-    <%= form.datetime_field :reminder %>
+    <%= form.label :reminder, style: "margin-right: 10px;" %>
+    <%= form.datetime_field :reminder, style: "float: right;" %>
   </div>
   <br>
   <div>
-    <%= form.label :dueby, style: "display: block" %>
-    <%= form.datetime_field :dueby %>
+    <%= form.label :dueby, style: "margin-right: 10px;" %>
+    <%= form.datetime_field :dueby, style: "float: right;" %>
   </div>
   <br>
-  <div>
-    <%= form.submit %>
+  <div id="button-container">
+    <%= form.submit class: "button" %>
   </div>
 <% end %>
