--- a/app/views/todo_tasks/_form_edit.html.erb
+++ b/app/views/todo_tasks/_form_edit.html.erb
@@ -12,26 +12,26 @@
   <% end %>
 
   <div>
-    <%= form.label :description, style: "display: block" %>
-    <%= form.text_field :description %>
+    <%= form.label :description, style: "margin-right: 10px;" %>
+    <%= form.text_field :description, style: "float: right;" %>
   </div>
 
   <div>
-    <%= form.label :reminder, style: "display: block" %>
-    <%= form.datetime_field :reminder %>
+    <%= form.label :reminder, style: "margin-right: 10px;" %>
+    <%= form.datetime_field :reminder, style: "float: right;" %>
   </div>
 
   <div>
-    <%= form.label :dueby, style: "display: block" %>
-    <%= form.datetime_field :dueby %>
+    <%= form.label :dueby, style: "margin-right: 10px;" %>
+    <%= form.datetime_field :dueby, style: "float: right;" %>
   </div>
 
   <div>
-    <%= form.label :completed, style: "display: block" %>
-    <%= form.check_box :completed %>
+    <%= form.label :completed, style: "margin-right: 10px" %>
+    <%= form.check_box :completed, style: "float: right;" %>
   </div>
 
-  <div>
-    <%= form.submit %>
+  <div id="button-container">
+    <%= form.submit class: "button"%>
   </div>
 <% end %>
