--- a/app/views/todo_tasks/edit.html.erb
+++ b/app/views/todo_tasks/edit.html.erb
@@ -1,10 +1,13 @@
-<h1>Editing todo task</h1>
+<h1 id="heading">Update Task</h1>
 
+<div id="form-centering">
 <%= render "form_edit", todo_task: @todo_task %>
-
+</div>
 <br>
 
-<div>
-  <%= link_to "Show this todo task", @todo_task %> |
-  <%= link_to "Back to todo tasks", todo_tasks_path %>
+<div id="button-container">
+  <%= button_to "Show this todo task", @todo_task, method: :get, params: { id: @todo_task.object_id }, class: "button" %> 
+</div>
+<div id="button-container">
+  <%= button_to "Back to todo tasks", todo_tasks_path, method: :get, class: "button" %>
 </div>
