--- a/app/views/todo_tasks/index.html.erb
+++ b/app/views/todo_tasks/index.html.erb
@@ -1,21 +1,19 @@
-<p style="color: green"><%= notice %></p>
-
-<h1>Todo tasks</h1>
-
+<h1 id="heading">Todo tasks</h1>
+<div id="form-centering">
 <div id="todo_tasks">
   <% @todo_tasks.each do |todo_task| %>
     <% if todo_task.isCurrent %>
     <%= render todo_task %>
     <p>
-      <%= link_to "Show this todo task", todo_task %>
+      <%= button_to "Show this todo task", todo_task, method: :get, params: { id: todo_task.object_id }, class: "button" %>
     </p>
     <% end %>
   <% end %>
 </div>
+</div>
+<br>
 
-<br>
-<br>
-<%= link_to "New todo task", new_todo_task_path %>
-<p>
-<%= link_to 'Return to Home', home_path, method: :get %>
-</p>
+<div id="button-container">
+<%= button_to "New todo task", new_todo_task_path, method: :get, class: "button" %>
+<%= button_to 'Return to Home', home_path, method: :get, class: "button" %>
+</div>
