--- a/app/views/todo_tasks/new.html.erb
+++ b/app/views/todo_tasks/new.html.erb
@@ -1,9 +1,11 @@
-<h1>New todo task</h1>
+<h1 id="heading">Create a New Task</h1>
 
+<div id="form-centering">
 <%= render "form", todo_task: @todo_task %>
+</div>
 
 <br>
 
-<div>
-  <%= link_to "Back to todo tasks", todo_tasks_path %>
+<div id="button-container">
+  <%= button_to "Back to todo tasks", todo_tasks_path, method: :get, class: "button" %>
 </div>
