--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,17 +13,11 @@
  *= require_tree .
  *= require_self
  */
-#header, #footer{
-	padding: 15px 20px 10px 5px;
-	display: flex;
-	width: 100%;
-	height: 8vh;
-	justify-content: center;
-	font-size: large;
-	font-weight: bold;
-	color: #2a2438;
-}
 
+html {
+	font-family: 'Open Sans', sans-serif;	
+} 
+ 
 #heading{
 	flex: 0 35%;
 	text-align: center;
@@ -34,6 +28,7 @@
 #button-container{
     overflow: hidden;
     width: 100%;
+    flex-wrap: wrap;
 	font-weight: 300;
 	font-size: 14px;
 	margin: 0 auto;
@@ -43,8 +38,18 @@
   	justify-content: center;
 }
 
-#nav-bar a{
-	margin: 0px 20px 0px 20px;
+#button-container-2-max{
+    overflow: hidden;
+    width: 100%;
+    flex-wrap: wrap;
+	font-weight: 300;
+	font-size: 14px;
+	margin: 0 auto;
+	padding: 5px;
+	text-align: center;
+	display: flex;
+  	justify-content: center;
+  	max-width: 500px;
 }
 
 .button {
@@ -57,6 +62,8 @@
   float: left;
   margin: 5px;
   min-width: 230px;
+  border-radius: 8px;
+  box-shadow: rgba(0,0,0,0.15) 0px 3px 3px 0px;
 }
 
 #background-color {
@@ -96,4 +103,12 @@
 
 .form-line-container {
 	display: flex;
+}
+
+.form-grid {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	row-gap: 10px;
+	justify-items: stretch;
+	justify-content: space-between;
 }
