--- a/app/views/todo_tasks/_form_edit.html.erb
+++ b/app/views/todo_tasks/_form_edit.html.erb
@@ -11,24 +11,15 @@
     </div>
   <% end %>
 
-  <div>
-    <%= form.label :description, style: "margin-right: 10px;" %>
-    <%= form.text_field :description, style: "float: right;" %>
-  </div>
-
-  <div>
-    <%= form.label :reminder, style: "margin-right: 10px;" %>
-    <%= form.datetime_field :reminder, style: "float: right;" %>
-  </div>
-
-  <div>
-    <%= form.label :dueby, style: "margin-right: 10px;" %>
-    <%= form.datetime_field :dueby, style: "float: right;" %>
-  </div>
-
-  <div>
-    <%= form.label :completed, style: "margin-right: 10px" %>
-    <%= form.check_box :completed, style: "float: right;" %>
+  <div class="form-grid">
+    <%= form.label :description %>
+    <%= form.text_field :description %>
+    <%= form.label :reminder %>
+    <%= form.datetime_field :reminder %>
+    <%= form.label :dueby %>
+    <%= form.datetime_field :dueby %>
+    <%= form.label :completed %>
+    <%= form.check_box :completed %>
   </div>
 
   <div id="button-container">
